# beginner_tutorials

./: CMakeLists.txt  README.md  compile_commands.json  package.xml
.clangd/index/: publisher_member_function.cpp.E2E2D0BA4CD54B08.idx  subscriber_member_function.cpp.9855CCC195AD9BF9.idx  talker_test.cpp.8A3EAB1A015BD25A.idx
Results/: cppcheck.txt  cpplint.txt
launch/: nodes_launch.py
rosbag2/: metadata.yaml  rosbag2.db3
src/: publisher_member_function.cpp  subscriber_member_function.cpp
srv/: ChangeString.srv
test/: talker_test.cpp
